app/assets/stylesheets/static_pages.scss
// Place all the styles related to the StaticPages controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

/* reset */
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font: inherit;
  vertical-align: baseline;
  font-family: 'Pangolin', cursive;
  vertical-align: baseline;}

/* HTML5 display-role reset for older browsers */

article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
  display: block; }

body {
  line-height: 1; }

ol, ul {
  list-style: none; }

blockquote, q {
  quotes: none; }

blockquote {
  &:before, &:after {
    content: '';
    content: none; } }

q {
  &:before, &:after {
    content: '';
    content: none; } }

table {
  border-collapse: collapse;
  border-spacing: 0; }
/* end */


$main-border: 1px solid black;
$quarter-width: 25%;
$whitetext: #fff;
$primary-color: #066DEE;
$main-action: #00A600;
$light-grey: #DDDDDD;
$darker-grey: #666;


.grey-back-ground {
    background-color: $light-grey;
}

.photos-copied-text-area {

  img {
    margin: 5px 18px;
  }

}

.post-copied {
  h3 {
    margin-bottom: 0px;
    border-bottom: none;
  }
}

.outer-post-area {
  border-left: $main-border;
  border-right: $main-border;
  padding: 10px;
}

.post {
  margin-top: 20px;
  border: $main-border;
  padding: 10px;
  img {
    float: left;
  }
}


.post-header {
  display: inline-block;
  vertical-align: bottom;
}

.post-body {
  margin-top: 20px;
}

.post-links-area {
  border-top: 1px solid black;
  background-color: aaa;
  a {
    padding: 5px;
    display: inline-block;
    &:last-child {
      float: right;
    }
  }
}

.submit-post-button,
.submit-comment-button {
  color: white;
  background-color: $primary-color;
}

.make-new-post {
  display: block;
  width: 90%;
  margin-left: auto;
  margin-right: auto;
}

.more-link {
  margin: 5px;
}

.more-link,
.about-text-area {
  text-align: center;
}


.friend-pic-link {
  display: inline-block;
  margin: 5px 18px;
}

.comment-header-area {
  border-bottom: 1px solid #555555;
  padding-top: 10px;
  a {
    &:nth-child(2) {
      float: right;
      padding-right: 10px;
    }
  }
}

.comment-body {
  padding-top: 10px;
  p {
    display: inline-block;
    &:last-child {
      padding: 10px;
    }
  }
  img {
    float: left;
  }
}

.comment-area {
  padding-left: 10px;
}

.inner-comment-body {
  padding: 0px 55px;
  a {
    &:last-child {
    float: right;
    }
  }
}

.comment-text-area-div {
  padding: 0px 55px;
  margin-bottom: 20px;
}

.comment-text-area {
  width: 100%;
  height: 100px;
}

.submit-comment-button {
  float: right;
}



.left-side,
.right-side,
.far-right,
.right-top,
.left-top,
.friend-name,
.friend-summary input,
.login,
#profile-pic,
#profile-name,
.name-pic-block,
#sign-up-form,
.photos-heading   {
	display: inline-block;
}

.form-elements,
.not-loggedin-nav,
#sign-up-button,
.timeline-links,
.blue-bar,
#first-table,
#second-table {
  width: 100%;
}

.white-text {
  color: $whitetext;
}

.not-loggedin-nav {
  background: $primary-color;
  display: flex;
  padding: 5px;
  position: fixed;
  height: 70px;
  justify-content: space-between;
  align-items: center;
	z-index: 2;
}

.far-left {
  margin-right: 50px;
  img {
    display: inline-block;
    margin-bottom: 20px;
  }
  h1 {
  display: inline-block;
  }
}

.loggedin-nav {
  background: $primary-color;
  position: fixed;
  height: 70px;
  width: 100%;
  z-index: 2;
  display: flex;
  justify-content: center;

  align-items: center;
}

#email,
#password {
  width: 150px;
}

.pwd {
  float: right;
  padding-left: 20px;
  margin-right: 150px;
}

.not-loggedin-brand {
		margin-left: 130px;
}

.not-loggedin-brand,
.home-benefits h1 {
  font-size: 40px;
}

.loggedin-brand {
  margin-right: 20px;
}

.home-benefits {
  height: 400px;
  line-height: 50px;
	padding: 10px auto;
	letter-spacing: 2px;
	display: inline-block;
	width: $quarter-width*2;
	vertical-align: top;
	margin-top: 150px;
	margin-left: 80px;

  ul {
  list-style-type: disc;
  padding-left: 40px;
  color: $darker-grey;
}

}

#sign-up-form {
  width: 33.33%;
	margin-top: 50px;
	margin-left: 50px;
}

#main-action {
  font-size: 50px;
	padding: 30px 0;
}

.form-elements {
	line-height: 2.5;
}

.wide-box {
	width: 99%;
}

.smaller-input-box {
	width: 45%;
}

#first-name-box {
  margin-right: 30px;
}

#birthday {
 font-size: 20px;
 padding-bottom: 3px;
}

#sign-up-button {
	background: $primary-color;
	color: $whitetext;
	height: auto;
	font-size: 20px;
}

/* about page code */

.about-bar {
	margin-bottom: 40px;
}

.top-main-section {
	height: 460px;
  width: 100%;
}


#cover-photo {
	width: 80%;
	margin-left: auto;
	margin-right: auto;
}

.timeline-links {
	text-align: center;
	table-layout: fixed;

  td {
    vertical-align: middle;
  	padding: 20px 10px;
  }
}

.empty {
  width: 20%;
}

.edit-profile-link {
  text-align: right;
	vertical-align: middle;
  width: 35%;
}

.link {
  color: black;
  &:hover {
    color: blue;
  }
}

.timeline-link:hover,
.about-link:hover,
.photos-link:hover,
.friends-link:hover {
    background: $light-grey;
}


.link-background {
  background: $light-grey;
}

#cover-photo {
	margin-top: 60px;
}

.bar,
.link-wrapper,
.time-link-links,
.friend-summary,
.submit-post-button-area,
#sign-up-button,
.post-links-area,
.comment-area,
.friend-link-section,
.photos-wrapper,
.photos-border {
  border: $main-border;
}

.info-section {
  border-right: $main-border;
  border-left: $main-border;
  border-bottom: $main-border;
  padding: 20px;
}

.post-copied,
.left-section-article-heading {
  h3 {
		border: $main-border;
    padding: 5px;
    text-align: center;
  }
}

.left-section-article-heading {
  border-right: 1px solid black;
  border-bottom: 1px solid black;
  border-left: 1px solid black;
}

.name-pic-block {
	position: relative;
	top: -240px;
	left: 20px;
	width: 400px;
	height: 200px;
	z-index: 1;
}

#profile-name {
	height: 80px;
	vertical-align: bottom;
	margin-left: 10px;
	font-size: 35px;
}

.search-bar {
	width: 550px;
	height: 20px;
	margin-left: 40px;
	margin-right: 220px;
}

.left-top,
.right-top,
.search-bar {
	vertical-align: middle;
	margin-top: 10px;
}

.about-title,
.photos-title {
	width: 87%;
}

.about-title,
.friends-title,

.photos-title {
	text-align: center;
	font-size: 30px;
	margin: 5px 0px;
}

.edit {
	background-color: $primary-color;
	position: relative;
	top: -36px;
	right: 12px;
}

.save-changes-button {
  font-size: 50px;
  padding: 20px 5em;
  display: block;
  margin: 0px auto 80px auto;
  background-color: $primary-color;
}

.bottom-spacer {
  margin-bottom: 120px;
}

.bar,
.friend-link  {
	background-color: $light-grey;
}
.about-link,
.friend-link {
	margin-bottom: 40px;
}

.info-section {
	height: auto;
}


.right-side,
.left-side {
		vertical-align: top;
		line-height: 1.5;
    width: 100%;
}

.left-side {
  padding-left: 40px;
}

.heading,
#first-table {
	margin-bottom: 20px;
}

.heading {
	font-size: 25px;
	text-align: left;
	letter-spacing: 2px;
}

.about-me {
	margin-top: 20px;
}

td {
	height: 30px;
}

.bold {
	font-weight: bold;
}

/*
 below code for friend page
*/
// for column layout

.friend-summary {
  padding: 20px;
  margin: 20px 5px;
  img {
    padding: 20px;
  }
}

.unfriend {
  padding-right: 15px;
  padding-left: 15px;
  margin-top: 50px;
}

/*
below code for photos page
*/

.photos-border {
  div img {
  align-content: center;
  }
}

.img_wrapper {
  position: relative;
  height: 200px;
  width: 250px;
  margin-top: 20px;
  margin-bottom: 20px;
  p {
    margin-top: 150px;
  }
}

.on-hover-description {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: rgba(40, 40, 40, 0.72);
  color: #fff;
  visibility: hidden;
  opacity: 0;
  height: 50px;
  text-align: center;

}

.img_wrapper:hover .on-hover-description {
  visibility: visible;
  opacity: .5;
}

